backend finally talking with frontend

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <meta name = "viewport" content="width=device-width, inital-scale=1"/>
+        <meta name = "viewport" content="width=device-width"/>
         <meta name="theme-color" content="#00000"/>
         <meta
             name="descritpion"
